--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ sudo: false # only for faster builds
  - clang
  - gcc
  script:
- - gcc -o test add.c // we can use gcc instead of clang too
- - ./test
+ - gcc -o test add.c 
+ - ./add
